hermes/tests/fixtures/allow_sorry_fallbacks/expected.stderr
  ⚠ unused variable: `cond`
    ╭─[[PROJECT_ROOT]/src/lib.rs:67:36]
 66 │ /// ```
 67 │ pub unsafe fn expects_precondition(cond: bool) {}
    ·                                    ──┬─
    ·                                      ╰── 
 68 │ 
    ╰────
  help: if this is intentional, prefix it with an underscore

[External Error] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: could not synthesize default value for field 'h_anon' of 'named_bounds_validation_failures.missing_user_bound.Post' using tactics
[External Error] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: Missing explicit proof for named bound `h_anon`.
[External Error] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: could not synthesize default value for field 'h_ret_is_valid' of 'named_bounds_validation_failures.unprovable_is_valid.Post' using tactics
[External Error] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c/NamedBoundsValidationFailuresNamedBoundsValidationFailures22b4e0ecfe54227c.lean: This error comes from the implicit `simp_all` proof for `h_ret_is_valid`. Lean cannot automatically prove that this value satisfies the `isValid` type invariant. Consider providing a manual proof via `proof (h_ret_is_valid)`.
  × Type mismatch
  │   true
  │ has type
  │   Bool
  │ but is expected to have type
  │   InvalidStruct
    ╭─[[PROJECT_ROOT]/src/lib.rs:42:14]
 41 │ /// ensures:
 42 │ ///   ret == true
    ·              ──┬─
    ·                ╰── here
 43 │ /// proof:
    ╰────

  × invalid {...} notation, structure type expected
  │   Post ret
    ╭─[[PROJECT_ROOT]/src/lib.rs:44:7]
 43 │     /// proof:
 44 │ ╭─▶ ///   -- A deliberately broken explicit proof should NOT emit "declaration uses sorry"
 45 │ │   ///   -- but instead natively fail on the syntax error "unknown tactic".
 46 │ │   ///   exact {
 47 │ │   ///       invalid_tactic
 48 │ ├─▶ ///   }
    · ╰──── here
 49 │     /// ```
    ╰────

  × Tactic `rfl` failed: The left-hand side
  │   true == false
  │ is not definitionally equal to the right-hand side
  │   true
  │ 
  │ ret : Unit
  │ h_returns : explicit_semantic_failure = ok ret
  │ ⊢ (true == false) = true
    ╭─[[PROJECT_ROOT]/src/lib.rs:58:7]
 57 │ /// proof (h):
 58 │ ///   rfl
    ·       ─┬─
    ·        ╰── here
 59 │ /// ```
    ╰────

Error: Lean verification failed. Consider running `cargo hermes generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
